--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
                     This project is a dynamic website built using React, React Router, and Formik for form management. The application features multiple pages, allowing users to navigate seamlessly through various sections. It utilizes React Router for client-side routing, ensuring a smooth user experience. For handling form submissions, Formik simplifies the process of managing form state and validation, making it easier for users to input data.
                 </p>
                 <br>
-                <a href="#">See The Project</a>
+                <a href="https://jobdonecontruction.netlify.app/" target="_blank">See The Project</a>
             </div>
 
             <!--Little Lemon-->
