--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="info">
-            <img src="/PortfolioAbraham/Images/WhatsApp Image 2025-01-09 at 16.33.24_53111b11.jpg" alt="profile">
+            <img src="Images/WhatsApp Image 2025-01-13 at 13.10.10_9c190bf4.jpg" alt="VinoTintoWebsite">
             <div class="aboutme">
                 <p>
                     I'm Amswon Abraham DS. Dorsainvil, haitian front‑end developer living in UAE, Passionate and detail-oriented Front-End Developer with comprehensive training from Meta, having completed nine courses in web development. Proficient in creating responsive and dynamic user interfaces using HTML, CSS, and JavaScript. Possessing strong problem-solving skills cultivated through previous roles in translation, interpretation, and telecommunication. Eager to leverage a unique blend of technical expertise and communication proficiency to deliver engaging and intuitive web experiences.
