--- a/project.html
+++ b/project.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Abraham</title>
 </head>
 <body>
+    <div class="tooggle">
+        <i class="fa fa-bars" aria-hidden="true" id="toggle"></i>
+    </div>
     <nav>
         <ul>
             <li><a href="home.html">Home</a></li>
@@ -82,6 +86,19 @@
 
     </main>
 
-    
+    <script>
+        $(document).ready(function(){
+
+          $("#toggle").click(function(){
+            $("ul").fadeToggle();
+          });
+        });
+        $(document).ready(function(){
+
+         $("#toggle").click(function(){
+         $("ul").css({"color": "black", "text-align": "center","margin": "10px" ,"width": "250px", "height": "240px", "padding": "30px", "line-height": "40px"});
+       });
+      });
+    </script>
 </body>
 </html>
